# libforkin

./: CMakeLists.txt  fork_utils.cpp  fork_utils.h  main.cpp  process_utils.cpp
libforkin_utils/: CMakeLists.txt
libforkin_utils/include/: client_utils.h  fork_utils.h  popen2.h  process_utils.h  server_utils.h
libforkin_utils/src/: client_utils.cpp  fork_utils.cpp  popen2.cpp  process_utils.cpp  server_utils.cpp
test_child_process/: CMakeLists.txt  main.cpp
test_client/: CMakeLists.txt  main.cpp
test_server/: CMakeLists.txt  main.cpp
test_subcmd/: CMakeLists.txt  main.cpp
test_subcmd/subcmd/: CMakeLists.txt  main.cpp
